@@ -6,6 +6,5 @@ t/000_basic.t
 t/100_historic.t
 t/950_pod.t
 t/960_pod_coverage.t
-t/990_kwalitee.t
 README
 META.yml                                 Module meta-data (added by MakeMaker)
